# cwk-word-utils

./: .coverage  .gitignore  README.md  README_dev.md  README_pandas_examples.md  justfile  pyproject.toml  requirements.txt
src/cwk_word_utils/: remove_stop_words.py  run_me.py  sentiment.py  term_tag_models.py  term_tagging.py  word_count.py
tests/: test_remove_stop_words.py  test_sentiment.py  test_term_tag_models.py  test_term_tagging.py  test_word_count.py
