[project]
name = "cwk-word-utils"
version = "0.2.0"
description = "Collection of utilities for working with words, including matching, stemming, similarity, and more."
readme = "README.md"
authors = [{ name = "Chuck King", email = "cwkingjr@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "nltk>=3.9.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "spacy>=3.8.7",
    "textblob>=0.19.0",
    "toolz>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.4.1", "ruff>=0.12.9"]

[tool.ruff]
target-version = "py313"

include = ["src/**.py", "tests/**.py"]
exclude = ["src/before.py"]

lint.select = [
    "B",    # bugbear:    potential bugs
    "DTZ",  # datetimez:  warn about missing timezones
    "F",    # pyflakes:   potential errors
    "FURB", # refurb:     refurbishing and modernizing Python codebases
    "PERF", # perflint:   avoid performance anti-patterns
    "PL",   # pylint:     the oldest static code analyser ( sometimes a bit pedantic)
    "RUF",  # ruff:       rules introduced by ruff
    "S",    # bandit:     security issues
    "SIM",  # simplify:   helps you simplify your code
    "UP",   # pyupgrade:  upgrade syntax or newer versions of the language
]
lint.ignore = []

[tool.ruff.lint.per-file-ignores]
# Some checks don't make sense in unit tests
"tests/*.py" = [
    "S101",    # Use of `assert` detected
    "PLR0133", # Two constants compared in a comparison, consider replacing `1 == 1"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["./tests"]
